--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <title>João da Silva - Desenvolvedor Web</title>
@@ -11,11 +12,27 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Shadows+Into+Light">
 </head>
+
 <body>
     <header class="titulo-principal">
         <img class="foto-home" src="imagens/eu.jpg" alt="Foto de João da Silva">
         <h1>João da Silva</h1>
         <p class="subtitulo-principal">Desenvolvedor web</p>
+
+        <ul>
+            <li class="palavra-home eficiencia">Eficiência</li>
+            <li class="palavra-home boas-praticas">Boas práticas</li>
+            <li class="palavra-home codigo-limpo">Código limpo</li>
+            <li class="palavra-home css3">CSS3</li>
+            <li class="palavra-home html5">HTML5</li>
+            <li class="palavra-home javascript">JavaScript</li>
+            <li class="palavra-home acessibilidade">Acessibilidade</li>
+            <li class="palavra-home responsivo">Responsivo</li>
+            <li class="palavra-home otimizacoes">Otimizações</li>
+            <li class="palavra-home agilidade">Agilidade</li>
+            <li class="palavra-home design">Design</li>
+        </ul>
+
     </header>
     <main>
         <section class="secao-inicio saudacao">
@@ -35,8 +52,12 @@
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
-                <li>
+                <li class="mais-recente">
                     <a href="blog.html">O essencial de design responsivo</a>
+                    <p class="inicio-post">
+                        Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis.
+                        Mas como começar?
+                    </p>
                 </li>
                 <li>
                     <a href="blog.html">Por que fazer páginas acessíveis?</a>
@@ -53,4 +74,5 @@
         <p>Você pode entrar em contato comigo <a href="contato.html">por e-mail</a> ou pelo telefone <a href="tel:+551234567890">(12) 3456-7890</a></p>
     </footer>
 </body>
+
 </html>
